[package]
name = "arc_map"
description = "A Map of Arc<Mutex<V>> that eases the access of indivdual members"
version = "0.1.3"
authors = ["storyfeet <thebeaky@psmail.net>"]
license = "MIT"
repository = "https://github.com/storyfeet/arc_map"
keywords = ["Arc","Map","Sync","Lock","Mutex"]

[dependencies]
